# dockhand

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: INSTALL_FIX.md  INTEGRATION_CONTRACT.md  TEST_REPORT.md
examples/: applications.json
scripts/: smoke-test.sh
src/dockhand/: allocator.py  cli.py  constants.py  db.py  env_file.py  errors.py  firewall.py  init_config.py  manifest.py  naming.py  output.py  ports.py  reservations.py  validation.py
tests/: test_cli_override.py  test_cli_smoke.py  test_integration_ready.py  test_ports_subcommands.py
